--- a/openstack/python-novaclient/python-novaclient.spec.j2
+++ b/openstack/python-novaclient/python-novaclient.spec.j2
@@ -1,6 +1,6 @@
 Name:           python-novaclient
 Epoch:          {{ epoch('python-novaclient') }}
-Version:        7.0.0
+Version:        7.1.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Nova
 License:        {{ license('Apache-2.0') }}
@@ -16,6 +16,7 @@ BuildRequires:  {{ py2pkg('python-glanceclient') }}
 BuildRequires:  {{ py2pkg('python-keystoneclient') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('os-client-config') }}
+BuildRequires:  {{ py2pkg('osprofiler') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
@@ -65,6 +66,7 @@ Requires:       {{ py2pkg('python-glanceclient') }}
 Requires:       {{ py2pkg('python-keystoneclient') }}
 Requires:       {{ py2pkg('mock') }}
 Requires:       {{ py2pkg('os-client-config') }}
+Requires:       {{ py2pkg('osprofiler') }}
 Requires:       {{ py2pkg('requests-mock') }}
 Requires:       {{ py2pkg('testrepository') }}
 Requires:       {{ py2pkg('testscenarios') }}
