--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -1,6 +1,6 @@
 %global with_doc 1
 %global sname keystone
-{% set upstream_version = '11.0.0.0b2' %}
+{% set upstream_version = '11.0.0.0rc1' %}
 {% set rpm_release = '1' %}
 %if 0%{?rhel} || 0%{?fedora}
 %global rdo 1
