--- a/openstack/monasca-common/monasca-common.spec.j2
+++ b/openstack/monasca-common/monasca-common.spec.j2
@@ -1,6 +1,6 @@
 %global sname monasca-common
 Name:           {{ py2name('monasca-common') }}
-Version:        1.3.0
+Version:        1.4.0
 Release:        0
 Summary:        Reusable code for building monitoring related services.
 License:        {{ license('Apache-2.0') }}
@@ -19,14 +19,18 @@ BuildRequires:  {{ py2pkg('kazoo') }}
 BuildRequires:  {{ py2pkg('PyMySQL') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('ujson') }}
-BuildRequires:  {{ py2pkg('kafka-python') }}
 Requires:       {{ py2pkg('oslo.config') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('kazoo') }}
 Requires:       {{ py2pkg('PyMySQL') }}
 Requires:       {{ py2pkg('ujson') }}
-Requires:       {{ py2pkg('kafka-python') }}
 BuildArch:      noarch
+%if "%{version}" != "1.4.0"
+# Currently monasca vendored kafka and will only eventually
+# switch to pykafka. atm it is not used
+BuildRequires:  {{ py2pkg('pykafka') }}
+Requires:       {{ py2pkg('pykafka') }}
+%endif
 
 %description
 Collection of sub-projects containing reusable application and
