Add missing PyYAML dependency to Monasca
Add missing PyYAML dependency. Package was specified in requirements.txt
but was missing in rpm package.

Change-Id: I9b8c540601e36f7c79adbc2e571222464efe9cda

--- a/openstack/monasca-notification/monasca-notification.spec.j2
+++ b/openstack/monasca-notification/monasca-notification.spec.j2
@@ -15,6 +15,7 @@ BuildRequires:  {{ py2pkg('six') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('monasca-statsd') }}
 Requires:       {{ py2pkg('monasca-common') }}
+Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('requests') }}
 BuildArch:      noarch
 
