--- a/openstack/monasca-persister/monasca-persister.spec.j2
+++ b/openstack/monasca-persister/monasca-persister.spec.j2
@@ -1,6 +1,6 @@
 %global sname monasca-persister
 Name:           {{ py2name('monasca-persister') }}
-Version:        1.3.0
+Version:        1.4.0
 Release:        0
 Summary:        Consumes metrics and alarm state transitions from message queue and stores them in database
 License:        {{ license('Apache-2.0') }}
@@ -11,8 +11,11 @@ BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('nose') }}
 BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('oslo.log') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('monasca-common') }}
+Requires:       {{ py2pkg('oslo.log') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('monasca-common') }}
 BuildArch:      noarch
