--- a/openstack/python-designateclient/python-designateclient.spec.j2
+++ b/openstack/python-designateclient/python-designateclient.spec.j2
@@ -57,7 +57,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %install
 %py2_install
 #man pages
-install -p -D -m 644 doc/build/man/designateclient.1 %{buildroot}%{_mandir}/man1/designateclient.1
+install -p -D -m 644 doc/build/man/*designateclient.1 %{buildroot}%{_mandir}/man1/designateclient.1
 
 %check
 %{__python2} setup.py testr
