--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -15,8 +15,8 @@
 %define username            monasca-agent
 %define groupname           monasca
 
-Name:           openstack-%{sname}
-Version:        1.7.0
+Name:           {{ py2name('monasca-agent') }}
+Version:        1.8.0
 Release:        0
 Summary:        OpenStack Monasca metrics agent
 License:        {{ license('Apache-2.0') }}
@@ -61,14 +61,14 @@ BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  sudo
 BuildRequires:  {{ py2pkg('supervisor') }}
 BuildRequires:  {{ py2pkg('tornado') }}
-Requires:       {{ py2name('monasca-agent') }} = %{version}-%{release}
+Requires:       python-%{sname} = %{version}-%{release}
 BuildArch:      noarch
 
 %description
 The Monasca Agent is a modern Python monitoring agent for gathering metrics and
 sending them to the Monasca API.
 
-%package -n {{ py2name('monasca-agent') }}
+%package -n python-%{sname}
 Summary:        Python module for monasca-agent
 Group:          Development/Languages/Python
 Requires:       {{ py2pkg('PyYAML') }}
@@ -92,7 +92,7 @@ Requires:       {{ py2pkg('stevedore') }}
 Requires:       {{ py2pkg('supervisor') }}
 Requires:       {{ py2pkg('tornado') }}
 
-%description -n {{ py2name('monasca-agent') }}
+%description -n python-%{sname}
 The Monasca Agent is a modern Python monitoring agent for gathering metrics and
 sending them to the Monasca API.
 
@@ -143,7 +143,7 @@ PYTHONPATH=. NOSE_EXCLUDE=test_override_values nosetests tests -v
 %dir %{_localstatedir}/log/%{sname}
 %{_unitdir}/%{name}.service
 
-%files -n {{ py2name('monasca-agent') }}
+%files -n python-%{sname}
 %doc README.md
 %license LICENSE
 %{_bindir}/monasca-collector
