--- a/openstack/monasca-notification/monasca-notification.spec.j2
+++ b/openstack/monasca-notification/monasca-notification.spec.j2
@@ -14,7 +14,7 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
 Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
-Source1:        %{sname}.service
+Source1:        openstack-%{sname}.service
 Source2:        %{sname}.yaml
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('pbr') }}
