--- a/openstack/monasca-api/monasca-api.spec.j2
+++ b/openstack/monasca-api/monasca-api.spec.j2
@@ -79,6 +79,7 @@ Group:          Development/Languages/Python
 
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('falcon') }}
+Requires:       {{ py2pkg('influxdb') }}
 Requires:       {{ py2pkg('keystonemiddleware') }}
 Requires:       {{ py2pkg('monasca-common') }}
 Requires:       {{ py2pkg('oslo.config') }}
