Update openstacksdk to 0.9.16
Change-Id: I557dae2c50eb0d078ce55f6b719e6d8075b8d595
Depends-on: Ia50525f7e3bd3a4f99e0260b1b0c84c89e1375ba
Depends-on: I3bde4df045287cbda07c9447ef3397de74f42910
Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>

--- a/openstack/openstacksdk/openstacksdk.spec.j2
+++ b/openstack/openstacksdk/openstacksdk.spec.j2
@@ -1,6 +1,6 @@
 %global sname openstacksdk
 Name:           {{ py2name('openstacksdk') }}
-Version:        0.9.13
+Version:        0.9.16
 Release:        0
 Summary:        An SDK for building applications to work with OpenStack
 License:        {{ license('Apache-2.0') }}
@@ -8,9 +8,14 @@ Group:          Development/Languages/Python
 Url:            https://launchpad.net/python-openstacksdk
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
+BuildRequires:  {{ py2pkg('Sphinx') }}
+BuildRequires:  {{ py2pkg('beautifulsoup4') }}
+BuildRequires:  {{ py2pkg('deprecation') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
+BuildRequires:  {{ py2pkg('os-testr') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('requests') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
@@ -20,6 +25,7 @@ BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
 BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
+Requires:       {{ py2pkg('deprecation') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
 Requires:       {{ py2pkg('os-client-config') }}
 Requires:       {{ py2pkg('six') }}
@@ -50,11 +56,12 @@ many services, along with complete documentation, examples, and tools.
 This package contains documentation files for %{name}.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
 
 %build
 %py2_build
+export PYTHONPATH=.
 %{__python2} setup.py build_sphinx
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
