--- a/openstack/python-glareclient/python-glareclient.spec.j2
+++ b/openstack/python-glareclient/python-glareclient.spec.j2
@@ -1,7 +1,7 @@
 %global sname python-glareclient
 Name:           {{ py2name('python-glareclient') }}
 Epoch:          {{ epoch('python-glareclient') }}
-Version:        0.2.0
+Version:        0.3.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Glare
 License:        {{ license('Apache-2.0') }}
@@ -68,6 +68,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %files
 %license LICENSE
 %doc README.rst ChangeLog
+%{_bindir}/glare
 %{python2_sitelib}/glareclient
 %{python2_sitelib}/*.egg-info
 
