Add template for monasca-ui
Also fix the horizon package naming.

(cherry picked from commit 6e2a6afe2f4525b87f583bb85af99cf5ca3524ae)
(cherry picked from commit a56a639cdfe5ddfb1fd3cff0df43a071ae8a5f48)

Change-Id: Ief34d8f72455a471624ef129144133af8745054e

--- a/openstack/horizon/horizon.spec.j2
+++ b/openstack/horizon/horizon.spec.j2
@@ -1,22 +1,17 @@
-%define component horizon
-
+{% set pypi_name = 'horizon' %}
 {% set upstream_version = '11.0.0' %}
 {% set rpm_release = '1' %}
 
+%define component {{ pypi_name }}
+
 %if 0%{?rhel} || 0%{?fedora}
 %global rdo 1
-%global http_confdir %{_sysconfdir}/httpd/conf.d
-%global http_user apache
-%global http_group apache
 %global http_dashboard_dir %{_datarootdir}/openstack-dashboard
 %else
-%global http_confdir %{_sysconfdir}/apache2/conf.d
-%global http_user wwwrun
-%global http_group www
 %global http_dashboard_dir /srv/www/openstack-dashboard
 %endif
 
-Name:           openstack-dashboard
+Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
 Epoch:          {{ epoch('horizon') }}
@@ -99,7 +94,7 @@ Requires:       apache2-mod_wsgi
 Requires:       httpd
 Requires:       mod_wsgi
 %endif
-Requires:       {{ py2pkg('horizon') }} = %{epoch}:%{version}-%{release}
+Requires:       python-horizon = %{epoch}:%{version}-%{release}
 Provides:       openstack-%{component} = %{version}-%{release}
 
 # To generate a self-signed certificate to be used in demo setups:
@@ -123,7 +118,7 @@ The dashboard is just one way to interact with OpenStack resources.
 Developers can automate access or build tools to manage their resources
 using the native OpenStack API or the EC2 compatibility API.
 
-%package -n {{ py2pkg('horizon') }}
+%package -n python-horizon
 Summary:        OpenStack Dashboard (Horizon) - Python Module
 Group:          Development/Languages/Python
 Requires:       {{ py2pkg('Babel') }}
@@ -184,7 +179,7 @@ Requires:       {{ py2pkg('pytz') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('python-swiftclient') }}
 
-%description -n {{ py2pkg('horizon') }}
+%description -n python-horizon
 The Python module horizon is the core component of the OpenStack
 dashboard.
 
@@ -238,19 +233,19 @@ rm %{buildroot}%{http_dashboard_dir}/openstack_dashboard/local/*secret_key_store
 %endif
 rm -f %{buildroot}%{http_dashboard_dir}/openstack_dashboard/.eslintrc
 
-install -D -m 644 %{SOURCE2} %{buildroot}%{http_confdir}/openstack-dashboard.conf.sample
+install -D -m 644 %{SOURCE2} %{buildroot}%{apache_conf_dir}/openstack-dashboard.conf.sample
 
 %files
 %doc README.rst
 %{http_dashboard_dir}
-%attr(0750, %{http_user}, %{http_group}) %{http_dashboard_dir}/openstack_dashboard/local
-%attr(0640, %{http_user}, %{http_group}) %{http_dashboard_dir}/openstack_dashboard/local/__init__.py*
-%config(noreplace) %attr(0640, %{http_user}, %{http_group}) %{http_dashboard_dir}/openstack_dashboard/local/local_settings.py*
-%attr(0770, root, %{http_group}) %{http_dashboard_dir}/static/
-%attr(0770, root, %{http_group}) %{http_dashboard_dir}/media/
-%{http_confdir}/openstack-dashboard.conf.sample
+%attr(0750, %{apache_user}, %{apache_group}) %{http_dashboard_dir}/openstack_dashboard/local
+%attr(0640, %{apache_user}, %{apache_group}) %{http_dashboard_dir}/openstack_dashboard/local/__init__.py*
+%config(noreplace) %attr(0640, %{apache_user}, %{apache_group}) %{http_dashboard_dir}/openstack_dashboard/local/local_settings.py*
+%attr(0770, root, %{apache_group}) %{http_dashboard_dir}/static/
+%attr(0770, root, %{apache_group}) %{http_dashboard_dir}/media/
+%{apache_conf_dir}/openstack-dashboard.conf.sample
 
-%files -n {{ py2pkg('horizon') }}
+%files -n python-horizon
 %license LICENSE
 %{python2_sitelib}/horizon
 %{python2_sitelib}/horizon-*.egg-info
